[project]
name = "cyberforge"
version = "0.1.0"
description = "Cyber-first local AI workbench: profile hardware, recommend models, optimize, benchmark, verify."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "requests>=2.31",
    "httpx>=0.27",
    "huggingface-hub>=0.23",
    "rich>=13.7",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "keyring>=25.2",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.3",
    "transformers>=4.41",
    "peft>=0.11",
    "trl>=0.9",
    "bitsandbytes>=0.43",
    "accelerate>=0.31",
]
serve = [
    "vllm>=0.5",
]
cyber = [
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "imblearn>=0.0",
    "xgboost>=2.0",
    "yara-python>=4.5",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["packages*", "apps*"]

[tool.ruff]
line-length = 100
target-version = "py310"
